Update to hide console.log code line

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 return alert("TIE");
         }
         let computerSelection = computerPlay();
-             console.log(computerSelection);
+             // console.log(computerSelection);
         let playerSelection= prompt("enter your choice among rock paper scissors");
         let result = singleRound(playerSelection, computerSelection);
     </script>
